fix(product): product filter to be more readable

--- a/html-template/assets/scss/material-kit-pro/bootstrap/_transitions.scss
+++ b/html-template/assets/scss/material-kit-pro/bootstrap/_transitions.scss
@@ -1,5 +1,6 @@
 .fade {
   @include transition($transition-fade);
+transition-delay: 3000;
 
   &:not(.show) {
     opacity: 0;
